fix mobile white space glitch thank fuck

--- a/src/css/RarityGuide.css
+++ b/src/css/RarityGuide.css
@@ -161,18 +161,19 @@
         background-position: center;
         background-position-y: 50%;
         height: 40%;
-        padding-bottom: 60%;
+        padding-bottom: 80%;
     }
     
     .RarityTextContainer{
         padding-top: 20%;
-        width: 80%;
         position: absolute;
-        margin-left: 70%;
         color: white;
         padding-top: 2%;
         visibility: hidden;
-        
+        overflow-x: hidden;
+        margin: 0%;
+        padding: 0%;
+        font-size: 0px;
     }
     
     .RarityGuideTitle{
